# paperless-ocr-daemon

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CODE_GUIDELINES.md  DESIGN.md  Dockerfile  README.md  TEST_ARCHITECTURE.md  TEST_AUDIT.md  ocr_daemon.py  pyproject.toml  requirements-dev.txt
.desloppify/: config.json  findings.json  merged_review.json  query.json  review_batch1.json  review_batch2.json  review_batch3.json  review_packet_blind.json  state-python.json  state-python.json.bak
.desloppify/review_packets/: holistic_packet_20260304_234947.json  holistic_packet_20260305_001147.json  holistic_packet_20260305_002945.json  holistic_packet_20260305_004424.json  holistic_packet_20260305_020643.json  holistic_packet_20260305_032317.json  holistic_packet_20260306_055719.json  holistic_packet_20260306_062913.json
.github/workflows/: ci.yml  docker-image.yml
docs/: architecture.md  classification-pipeline.md  configuration.md  deployment.md  development.md  indexer.md  ocr-pipeline.md  resilience.md  search.md  store.md
src/appdb/: __init__.py  api_keys.py  config.py  migrations.py  recent_searches.py  reconcile_activity.py  schema.py  sessions.py  users.py
src/classifier/: __init__.py  constants.py  content_prep.py  daemon.py  metadata.py  normalizers.py  prompts.py  provider.py  quality_gates.py  result.py  tag_filters.py  taxonomy.py  worker.py
src/common/: __init__.py  bootstrap.py  claims.py  clock.py  concurrency.py  config.py  constants.py  content_checks.py  daemon_loop.py  document_iter.py  embeddings.py  heartbeat.py  library_setup.py  llm.py  logging_config.py  paperless.py  paperless_types.py  preflight.py  retry.py  shutdown.py  stale_lock.py  tags.py  utils.py
src/indexer/: activity.py  chunker.py  daemon.py  lock.py  reconciler.py
src/ocr/: __init__.py  daemon.py  image_converter.py  prompts.py  provider.py  text_assembly.py  worker.py
tests/: conftest.py  test_bootstrap.py  test_claims.py  test_claims_extended.py  test_classifier.py  test_classifier_provider_extended.py  test_classify_e2e.py  test_classify_main.py  test_classify_worker.py  test_classify_worker_extended.py  test_concurrency.py  test_config.py  test_content_prep.py  test_daemon_loop.py  test_daemon_loop_extended.py  test_llm.py  test_logging_config.py  test_main.py  test_metadata.py  test_normalizers.py  test_ocr.py  test_ocr_e2e.py  test_ocr_worker_extended.py  test_paperless.py  test_preflight.py  test_result.py  test_shutdown.py  test_stale_lock.py  test_tag_filters.py  test_tags.py  test_taxonomy_cache.py  test_taxonomy_extended.py  test_utils.py  test_worker.py
web/: .stylelintrc.json  eslint.config.js  index.html  package-lock.json  package.json  vitest.config.ts
(+487 files in other folders)
