[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "paperless-ai"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "httpx~=0.28",
    "openai~=1.35",
    "Pillow~=12.2",
    "pdf2image~=1.17",
    "structlog~=24.2",
    "sqlite-vec~=0.1",
    "fastapi~=0.136",
    "uvicorn[standard]~=0.47",
    "mcp~=1.27",
    "argon2-cffi~=23.1",
]

[project.scripts]
paperless-ai = "ocr.daemon:main"
paperless-classifier-daemon = "classifier.daemon:main"
paperless-indexer-daemon = "indexer.daemon:main"
paperless-search-server = "search.api:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "unit: Unit tests (fast, no I/O)",
    "integration: Integration tests (module boundaries)",
    "e2e: End-to-end tests (full workflows)",
    "anyio: Async test run on the anyio event loop (search API and MCP tests)",
]
addopts = "-q --tb=short"
